[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "one"
path = "src/one/main.rs"


[[bin]]
name = "two"
path = "src/two/main.rs"

[[bin]]
name ="three"
path = "src/three/main.rs"

[[bin]]
name = "four"
path = "src/four/main.rs"

[[bin]]
name = "five"
path = "src/five/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
